[tool.poetry]
name = "ujin"
version = "0.1.0"
description = ""
authors = ["fennr <fenrir1121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
asyncclick = "^8.1.3.4"
httpx = "^0.24.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
addopts = "--cov-report term-missing -ra"  # -s
